--- a/app/views/demo/index.html.erb
+++ b/app/views/demo/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Demo#index</h1>
-<p>Find me in app/views/demo/index.html.erb</p>
+<div id="app">
+  <vue-app></vue-app>
+</div>
+<%= javascript_pack_tag 'demo/index' %>
